Dibuat menggunakan Colaboratory

--- a/Laili_Miftachur_Rohmah_M_04_02_Coach_ChatbotAI_Sederhana.ipynb
+++ b/Laili_Miftachur_Rohmah_M_04_02_Coach_ChatbotAI_Sederhana.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Lailiimr/Studi-Independent/blob/main/Laili_Miftachur_Rohmah_M_04_02_Coach_ChatbotAI_Sederhana.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Lailiimr/CODINGAN/blob/main/Laili_Miftachur_Rohmah_M_04_02_Coach_ChatbotAI_Sederhana.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "yE4rWjtACRGf"
       },
@@ -57,13 +57,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ye3nyhSyCRGi",
-        "outputId": "64196045-f369-4edf-c33c-4d62066ad0de"
+        "outputId": "74223431-0cb6-423d-debd-0fe512aa3582"
       },
       "outputs": [
         {
@@ -72,55 +72,55 @@
           "text": [
             "Collecting newspaper3k\n",
             "  Downloading newspaper3k-0.2.8-py3-none-any.whl (211 kB)\n",
-            "\u001b[?25l\r\u001b[K     |█▌                              | 10 kB 22.6 MB/s eta 0:00:01\r\u001b[K     |███                             | 20 kB 10.1 MB/s eta 0:00:01\r\u001b[K     |████▋                           | 30 kB 9.0 MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 40 kB 8.3 MB/s eta 0:00:01\r\u001b[K     |███████▊                        | 51 kB 4.6 MB/s eta 0:00:01\r\u001b[K     |█████████▎                      | 61 kB 5.5 MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 71 kB 5.6 MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 81 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 92 kB 4.8 MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 102 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 112 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |██████████████████▋             | 122 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 133 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 143 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 153 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▉       | 163 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▍     | 174 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 184 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 194 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 204 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 211 kB 5.2 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: lxml>=3.6.0 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (4.2.6)\n",
-            "Requirement already satisfied: nltk>=3.2.1 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (3.2.5)\n",
+            "\u001b[?25l\r\u001b[K     |█▌                              | 10 kB 18.3 MB/s eta 0:00:01\r\u001b[K     |███                             | 20 kB 23.5 MB/s eta 0:00:01\r\u001b[K     |████▋                           | 30 kB 11.6 MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 40 kB 8.8 MB/s eta 0:00:01\r\u001b[K     |███████▊                        | 51 kB 4.7 MB/s eta 0:00:01\r\u001b[K     |█████████▎                      | 61 kB 5.6 MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 71 kB 5.7 MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 81 kB 6.0 MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 92 kB 6.7 MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 102 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 112 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████▋             | 122 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 133 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 143 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 153 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▉       | 163 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▍     | 174 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 184 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 194 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 204 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 211 kB 5.3 MB/s \n",
+            "\u001b[?25hCollecting jieba3k>=0.35.1\n",
+            "  Downloading jieba3k-0.35.1.zip (7.4 MB)\n",
+            "\u001b[K     |████████████████████████████████| 7.4 MB 27.0 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: nltk>=3.2.1 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (3.2.5)\n",
             "Collecting feedfinder2>=0.0.4\n",
             "  Downloading feedfinder2-0.0.4.tar.gz (3.3 kB)\n",
-            "Requirement already satisfied: PyYAML>=3.11 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (3.13)\n",
-            "Requirement already satisfied: python-dateutil>=2.5.3 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (2.8.2)\n",
-            "Collecting tinysegmenter==0.3\n",
-            "  Downloading tinysegmenter-0.3.tar.gz (16 kB)\n",
-            "Requirement already satisfied: requests>=2.10.0 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (2.23.0)\n",
-            "Collecting tldextract>=2.0.1\n",
-            "  Downloading tldextract-3.2.0-py3-none-any.whl (87 kB)\n",
-            "\u001b[K     |████████████████████████████████| 87 kB 6.3 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: Pillow>=3.3.0 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (7.1.2)\n",
-            "Collecting jieba3k>=0.35.1\n",
-            "  Downloading jieba3k-0.35.1.zip (7.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 7.4 MB 11.7 MB/s \n",
-            "\u001b[?25hCollecting feedparser>=5.2.1\n",
+            "Collecting feedparser>=5.2.1\n",
             "  Downloading feedparser-6.0.8-py3-none-any.whl (81 kB)\n",
-            "\u001b[K     |████████████████████████████████| 81 kB 8.0 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: beautifulsoup4>=4.4.1 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (4.6.3)\n",
+            "\u001b[K     |████████████████████████████████| 81 kB 3.9 MB/s \n",
+            "\u001b[?25hCollecting tinysegmenter==0.3\n",
+            "  Downloading tinysegmenter-0.3.tar.gz (16 kB)\n",
+            "Requirement already satisfied: PyYAML>=3.11 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (3.13)\n",
             "Collecting cssselect>=0.9.2\n",
             "  Downloading cssselect-1.1.0-py2.py3-none-any.whl (16 kB)\n",
+            "Collecting tldextract>=2.0.1\n",
+            "  Downloading tldextract-3.2.1-py3-none-any.whl (87 kB)\n",
+            "\u001b[K     |████████████████████████████████| 87 kB 1.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: python-dateutil>=2.5.3 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (2.8.2)\n",
+            "Requirement already satisfied: lxml>=3.6.0 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (4.2.6)\n",
+            "Requirement already satisfied: requests>=2.10.0 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (2.23.0)\n",
+            "Requirement already satisfied: Pillow>=3.3.0 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (7.1.2)\n",
+            "Requirement already satisfied: beautifulsoup4>=4.4.1 in /usr/local/lib/python3.7/dist-packages (from newspaper3k) (4.6.3)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from feedfinder2>=0.0.4->newspaper3k) (1.15.0)\n",
             "Collecting sgmllib3k\n",
             "  Downloading sgmllib3k-1.0.0.tar.gz (5.8 kB)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.10.0->newspaper3k) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.10.0->newspaper3k) (3.0.4)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.10.0->newspaper3k) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.10.0->newspaper3k) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.10.0->newspaper3k) (2.10)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.10.0->newspaper3k) (2021.10.8)\n",
             "Collecting requests-file>=1.4\n",
             "  Downloading requests_file-1.5.1-py2.py3-none-any.whl (3.7 kB)\n",
             "Requirement already satisfied: filelock>=3.0.8 in /usr/local/lib/python3.7/dist-packages (from tldextract>=2.0.1->newspaper3k) (3.6.0)\n",
             "Building wheels for collected packages: tinysegmenter, feedfinder2, jieba3k, sgmllib3k\n",
             "  Building wheel for tinysegmenter (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for tinysegmenter: filename=tinysegmenter-0.3-py3-none-any.whl size=13553 sha256=2241471269cac9a00af2f4aff907e40c5e5ce0a0481bcb9f0a25a655c31c841a\n",
+            "  Created wheel for tinysegmenter: filename=tinysegmenter-0.3-py3-none-any.whl size=13553 sha256=b02ef9f57cf38fbaf6a287f137c7a646d77872a3e736a93eb7c60645f5a39a30\n",
             "  Stored in directory: /root/.cache/pip/wheels/df/67/41/faca10fa501ca010be41b49d40360c2959e1c4f09bcbfa37fa\n",
             "  Building wheel for feedfinder2 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for feedfinder2: filename=feedfinder2-0.0.4-py3-none-any.whl size=3357 sha256=cf11ebb066a6e81c54373f9e8c18fcbed9c3fee6d6f37981abfac25a4d6b14d1\n",
+            "  Created wheel for feedfinder2: filename=feedfinder2-0.0.4-py3-none-any.whl size=3357 sha256=e6dbcc2293b355f5cb341f02e44c3aca671328a51f5d6cf2d55ee2db8713aa9a\n",
             "  Stored in directory: /root/.cache/pip/wheels/7f/d4/8f/6e2ca54744c9d7292d88ddb8d42876bcdab5e6d84a21c10346\n",
             "  Building wheel for jieba3k (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for jieba3k: filename=jieba3k-0.35.1-py3-none-any.whl size=7398404 sha256=52ebdb0fcf81a1e11eb1cfbd0a48da45047991f6a6b96de5dfc16ba798d441f2\n",
+            "  Created wheel for jieba3k: filename=jieba3k-0.35.1-py3-none-any.whl size=7398404 sha256=49371199f0bded05f7ba943d485ec9b41b456d4adf9e4c7112ea6663bfa7c310\n",
             "  Stored in directory: /root/.cache/pip/wheels/4c/91/46/3c208287b726df325a5979574324878b679116e4baae1af3c3\n",
             "  Building wheel for sgmllib3k (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for sgmllib3k: filename=sgmllib3k-1.0.0-py3-none-any.whl size=6066 sha256=4397646c009612d703a3dbad9efd22f57e82f0a0026ec863e69cd51bf5d6cb25\n",
+            "  Created wheel for sgmllib3k: filename=sgmllib3k-1.0.0-py3-none-any.whl size=6066 sha256=2d1c4c3388e964cd290c2fe980e591e63b25414ccaaa5ddbfa7732068564b528\n",
             "  Stored in directory: /root/.cache/pip/wheels/73/ad/a4/0dff4a6ef231fc0dfa12ffbac2a36cebfdddfe059f50e019aa\n",
             "Successfully built tinysegmenter feedfinder2 jieba3k sgmllib3k\n",
             "Installing collected packages: sgmllib3k, requests-file, tldextract, tinysegmenter, jieba3k, feedparser, feedfinder2, cssselect, newspaper3k\n",
-            "Successfully installed cssselect-1.1.0 feedfinder2-0.0.4 feedparser-6.0.8 jieba3k-0.35.1 newspaper3k-0.2.8 requests-file-1.5.1 sgmllib3k-1.0.0 tinysegmenter-0.3 tldextract-3.2.0\n"
+            "Successfully installed cssselect-1.1.0 feedfinder2-0.0.4 feedparser-6.0.8 jieba3k-0.35.1 newspaper3k-0.2.8 requests-file-1.5.1 sgmllib3k-1.0.0 tinysegmenter-0.3 tldextract-3.2.1\n"
           ]
         }
       ],
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "4FGmgeEECRGi"
       },
@@ -169,13 +169,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sa8BD2nwCRGj",
-        "outputId": "57d50a62-71b5-4aac-ddd4-f5ba997068f1"
+        "outputId": "6086e4ce-93be-4b30-ced3-1eb016ec780e"
       },
       "outputs": [
         {
@@ -234,13 +234,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "otZH3R0eCRGk",
-        "outputId": "4d06f191-bb83-49ec-8497-d81c2b182c3a"
+        "outputId": "d097a51c-7a3d-414a-9980-49059472068d"
       },
       "outputs": [
         {
@@ -285,13 +285,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vh1UaZ3kCRGl",
-        "outputId": "09d40992-2f29-47c7-a8ee-fe36f23bda51"
+        "outputId": "08d9af32-d983-45a4-fb51-f32b50f7026d"
       },
       "outputs": [
         {
@@ -326,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "qII0gu1dCRGm"
       },
@@ -373,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "ZQnYG5nQCRGn"
       },
@@ -408,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "VrBJ58bvCRGn"
       },
@@ -463,13 +463,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7GTB7h9TCRGo",
-        "outputId": "2cdeaa8b-dc43-44b6-db0d-1734d8fb5ceb"
+        "outputId": "d0295ff5-3fda-406c-f349-6db42abb5d22"
       },
       "outputs": [
         {
@@ -477,7 +477,7 @@
           "name": "stdout",
           "text": [
             "Doc Bot: I am DOc bot and I will answer your queries about chronic kidney disease, if you want to exit type, bye  ?\n",
-            "Bye\n",
+            "bye\n",
             "Doc Bot: Bye Bye See you later\n"
           ]
         }
@@ -533,13 +533,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FYT3-ERtgjjS",
-        "outputId": "15af28e5-f936-47a3-e0d7-9b86f13fd960"
+        "outputId": "6ddc5ad2-3376-4854-89c3-94331b899ae9"
       },
       "outputs": [
         {
@@ -616,13 +616,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qsID-u6Gg012",
-        "outputId": "0e675b1a-a3f6-47c3-d5dd-b2c89a144dda"
+        "outputId": "c5f29492-2c13-4588-8079-88d7ed13471b"
       },
       "outputs": [
         {
@@ -644,18 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "iq-tYfnBiS06"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "lYvkaKOHiia2"
       },
@@ -683,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "TZU6BZB3iia7"
       },
@@ -707,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "jgD-wmTwiia7"
       },
@@ -753,13 +742,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "knRbg2R0iia8",
-        "outputId": "56289208-c489-4644-878d-a7ddb1777d60"
+        "outputId": "e1763377-c0a5-4499-d9e1-78746a9c030b"
       },
       "outputs": [
         {
@@ -767,11 +756,7 @@
           "name": "stdout",
           "text": [
             "Doc Bot: Mau nanya apa kamu tentang kabel laut\n",
-            "kabel laut adalah\n",
-            "Doc Bot:  Jaringan Kabel Laut di Indonesia\n",
-            "\n",
-            "Kabel laut yang ada di negeri kita juga cukup banyak.\n",
-            "exit\n",
+            "bye\n",
             "Doc Bot: Bye Bye Sampai jumpa lagi\n"
           ]
         }
@@ -796,7 +781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "H8psLH5Ji4ng"
       },
